--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "env": "^0.0.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.1",
-    "nodemon": "^2.0.21"
+    "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": "^18.12.1"
   }
 }
